--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -11,8 +11,12 @@
     Description: {{ product.description }}
   </p>
  <button (click)="share()">
-    Share
-  </button>
+  Share
+</button>
+
+<app-product-alerts
+  [product]="product">
+</app-product-alerts>
 
 </div>
 <!-- 
