--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -10,12 +10,13 @@
    <p *ngIf="product.description">
     Description: {{ product.description }}
   </p>
- <button (click)="share()">
+<button (click)="share()">
   Share
 </button>
 
 <app-product-alerts
-  [product]="product">
+  [product]="product" 
+  (notify)="onNotify()">
 </app-product-alerts>
 
 </div>
